fix overflow

--- a/frontend/webschedule-app/src/app/app.component.scss
+++ b/frontend/webschedule-app/src/app/app.component.scss
@@ -1,5 +1,5 @@
 .week-drawer-container {
-    height: 90vh;
+    height: calc(100vh - 65px);
     background-color: white;
 }
 
