--- a/frontend/webschedule-app/src/app/group-details/chat/chat.component.scss
+++ b/frontend/webschedule-app/src/app/group-details/chat/chat.component.scss
@@ -1,6 +1,6 @@
 .messages-container {
     overflow-y: auto; 
-    max-height: calc(55vh - 120px);
+    max-height: calc(90vh - 420px);
     display: flex; 
     flex-direction: column;
 }
